<resources>
    <string name="app_name">CrudProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>
    <string name="default_field">default</string>
    <string name="occupation">Occupation:</string>
    <string name="education">Education:</string>
    <string name="phone">Phone:</string>
    <string name="about">About:</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="commit">Commit</string>
    <string name="title_activity_fragment">FragmentActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="list_is_empty_press_button_to_add_a_person">List is empty. Press (+) button to add a person.</string>
</resources>